--- a/teste.html
+++ b/teste.html
@@ -3,14 +3,14 @@
 	<head>
 		<title>TESTE</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<link rel="stylesheet" type="text/css" href="info.css">
+		<link rel="stylesheet" type="text/css" href="css/info.css">
 		<link rel="stylesheet" href="css/fontawesome-all.css" >
 	</head>
 	<body>
 		<div class="container">
 			<div class="box">
 				<div class="thumb">
-					<img src="imagens/inf.jpg">
+					<img src="imagens/inf2.jpg">
 				</div>
 				<div class="detalhes">
 					<div class="content">
@@ -22,7 +22,7 @@
 			</div>
 			<div class="box">
 				<div class="thumb">
-					<img src="imagens/inf.jpg">
+					<img src="imagens/inf2.jpg">
 				</div>
 				<div class="detalhes">
 					<div class="content">
@@ -34,7 +34,7 @@
 			</div>
 			<div class="box">
 				<div class="thumb">
-					<img src="imagens/inf.jpg">
+					<img src="imagens/inf2.jpg">
 				</div>
 				<div class="detalhes">
 					<div class="content">
@@ -46,7 +46,7 @@
 			</div>
 			<div class="box">
 				<div class="thumb">
-					<img src="imagens/inf.jpg">
+					<img src="imagens/inf2.jpg">
 				</div>
 				<div class="detalhes">
 					<div class="content">
