--- a/teste.html
+++ b/teste.html
@@ -7,7 +7,7 @@
 		<link rel="stylesheet" href="css/fontawesome-all.css" >
 	</head>
 	<body>
-		<div class="container">
+		<div class="container-info">
 			<div class="box">
 				<div class="thumb">
 					<img src="imagens/inf2.jpg">
