Atualixando os eventos

--- a/eventos/editar-eventos.html
+++ b/eventos/editar-eventos.html
@@ -7,7 +7,7 @@
 
 	<title>Cadastrar eventos</title>
 
-	<link rel="stylesheet" href="../css/bootstrap.css" >
+	<link rel="stylesheet" href="../css/bootstrap.min.css" >
 	<link rel="stylesheet" href="css/cadastrar-eventos.css" >
 
 </head>
